--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed" data-bs-theme="dark">
   <div class="container-fluid" style="margin-bottom: 10px;margin-top: 10px;">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,18 +9,46 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+        <li class="nav-item" id="signup">
+          <button (click)="openSignUp()" >Sign up</button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        <li class="nav-item" id="login">
+          <button (click)="openLogIn()">Login</button>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <!-- <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> -->
     </div>
   </div>
 </nav>
+
 <router-outlet></router-outlet>
+<div class="register" *ngIf="showRegister">
+  <div class="dialogRegister">
+    <h2 style="text-decoration: underline;display: flex; justify-content: center;">Register</h2>
+  </div>
+  <div>
+    Username:
+  </div>
+</div>
+<div class="login" *ngIf="showLogin">
+  <div>
+  <h2 style="text-decoration: underline;display: flex; justify-content: center;">Login</h2>
+  </div>
+  <div class="loginpassword">
+    <div>
+    Username:
+    </div>
+    <div>
+      <input type="text" name="" id="">
+    </div>
+    <div>
+      Password:
+    </div>
+    <div>
+      <input type="password" name="" id="">
+    </div>
+  </div>
+</div>
