--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,7 @@
     position: sticky;
     left: 33%;
     bottom: 20%;
-    background: rgb(246, 244, 244);
+    /* background: rgb(246, 244, 244); */
     border: 2px solid rgb(85, 85, 101);
     border-radius: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -28,13 +28,60 @@
     position: sticky;
     left: 33%;
     bottom: 20%;
-    background: rgb(246, 244, 244);
+    /* background: rgb(246, 244, 244); */
     border: 2px solid rgb(85, 85, 101);
     border-radius: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-shadow: 5px 5px 5px 5px #a29e9e;
 }
-.loginpassword
+.popupHeading
 {
-    
+    display: grid;
+    grid-template-columns: auto;
+}
+#username
+{
+    display: flex;
+    margin-top: 15%;
+    margin-left: 10%;
+    justify-content: space-between;
+    width: 65%;
+}
+.formField
+{
+    border: none;
+    background-color: rgb(209, 233, 233);
+    border-radius: 5px;
+}
+#password
+{
+    margin-top: 5%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+}
+.loginButton
+{
+    width:20%;
+    margin-left: 30%;
+    margin-top: 10%;
+}
+.loginCancel
+{
+    width:20%;
+    margin-left: 5%;
+    margin-top: 10%;
+}
+.buttonsFlexLogin
+{
+    display: flex;
+}
+#registerUsername
+{
+    margin-top: 5%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
 }
