--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,11 +15,12 @@
     position: sticky;
     left: 33%;
     bottom: 20%;
-    /* background: rgb(246, 244, 244); */
+    background: white; 
+    z-index: 1001;
     border: 2px solid rgb(85, 85, 101);
     border-radius: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-shadow: 5px 5px 5px 5px #a29e9e;
+    box-shadow: 5px 5px 5px 5px black;
 }
 .login
 {
@@ -28,11 +29,12 @@
     position: sticky;
     left: 33%;
     bottom: 20%;
-    /* background: rgb(246, 244, 244); */
+    z-index: 1001;
+    background: white;
     border: 2px solid rgb(85, 85, 101);
     border-radius: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-shadow: 5px 5px 5px 5px #a29e9e;
+    box-shadow: 5px 5px 5px 5px black;
 }
 .popupHeading
 {
@@ -85,3 +87,13 @@
     justify-content: space-between;
     width: 65%;
 }
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000; /* On top of main content */
+  }
