Added search bar to the products page

--- a/src/app/views/products/products.component.css
+++ b/src/app/views/products/products.component.css
@@ -19,12 +19,12 @@
 .productpage
 {
     position: relative;
-    top: 15rem;
+    top: 5rem;
 }
-.col-3
+/* .col-3
 {
     margin-bottom: 5%;
-}
+} */
 .card-title
 {
     overflow: hidden;
@@ -38,4 +38,32 @@
     overflow: hidden;
     top: 60%;
     right: 0
+}
+.display-flex
+{
+    display: flex;
+    flex-wrap: wrap;
+    flex: auto auto auto auto;
+    width: 100%;
+    justify-content: space-around;
+}
+.product-cards
+{
+   margin-bottom: 3%;
+}
+.searchBar
+{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10%;
+}
+#search
+{
+    border-radius: 10px;
+    border: none;
+    width: 50%;
+    height: 3rem;
+    padding: 1%;
+    background-color: rgb(209, 233, 233);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
