--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -95,5 +95,5 @@
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 1000; /* On top of main content */
+    z-index: 1000; 
   }
