--- a/src/app/views/products/products.component.css
+++ b/src/app/views/products/products.component.css
@@ -62,8 +62,9 @@
     border-radius: 10px;
     border: none;
     width: 50%;
-    height: 3rem;
+    height: 3.5rem;
     padding: 1%;
     background-color: rgb(209, 233, 233);
+    font-size: 150%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
