Added Spring REST API Code and changed variables name in Angular Model folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
       </div>
       <div id="registerUsername">
         <span>Enter phone</span>
-        <input type="text" name="" [(ngModel)]="registerCustomer.MobileNo" class="formField">
+        <input type="text" name="" [(ngModel)]="registerCustomer.mobileNo" class="formField">
         </div>
       <div id="password">
         <span>Enter Password</span>
