--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,24 +1,21 @@
 <div class="productpage">
-<div class="searchBar">
-    <input type="text" name="" id="search" placeholder="Search for items...">
-</div>
-<div class="container">
-    <div class="display-flex">
-        @for (item of data(); track item.productId) 
-        {
-            <div class="product-cards">
-                    <div class="card" style="width: 18rem;">
-                    <div class="productCategory">{{item.categoryName}}</div>
-                    <img id="image-height" [src]=item.productImageUrl class="card-img-top" alt="Not present">
-                    <div class="card-body">
-                    <h5 class="card-title">{{item.productName}}</h5>
-                    <h5 class="card-title">${{item.productPrice}}</h5>
-                    <p class="ctext">{{item.productDescription}}</p>
-                    <a href="#" class="btn btn-primary">Add To Cart</a>
-                    </div>
-                    </div>
-            </div>
-        }
-</div>
-</div>
-</div>
+    <div class="searchBar">
+        <input type="text" name="" id="search" placeholder="Search for items...">
+    </div>
+    <div class="container">
+        <div class="display-flex">
+                <div class="product-cards" *ngFor="let item of data">
+                        <div class="card" style="width: 18rem;">
+                        <div class="productCategory">{{item.categoryName}}</div>
+                        <img id="image-height" [src]=item.productImageUrl class="card-img-top" alt="Not present">
+                        <div class="card-body">
+                        <h5 class="card-title">{{item.productName}}</h5>
+                        <h5 class="card-title">${{item.productPrice}}</h5>
+                        <p class="ctext">{{item.productDescription}}</p>
+                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        </div>
+                        </div>
+                </div>
+    </div>
+    </div>
+    </div>
