--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -97,3 +97,29 @@
     background: rgba(0, 0, 0, 0.5);
     z-index: 1000; 
   }
+
+  .cartDialog
+  {
+    width: 20%;
+    z-index: 2000;
+    border: black 1px solid; 
+    position: absolute;
+    background: white;
+    border-radius: 10px;
+    padding-bottom: 2%;
+  }
+  .cartItems
+  {
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 5%;
+  }
+  .closeCartButton
+  {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+  }
